--- a/app/views/email-address-page.html
+++ b/app/views/email-address-page.html
@@ -18,9 +18,11 @@
         }) }}
 
         {{ govukButton({
-          text: "Continue"
+          text: "Continue",
           href: "/confirmation-email",
-        })}}
+        }) }}
+
+        
 
       </form>
     </div>
