--- a/app/views/email-address-page.html
+++ b/app/views/email-address-page.html
@@ -18,8 +18,7 @@
         }) }}
 
         {{ govukButton({
-          text: "Continue",
-          href: "/confirmation-email",
+          text: "Continue"
         })}}
         
 
