--- a/app/views/email-address-page.html
+++ b/app/views/email-address-page.html
@@ -20,9 +20,8 @@
         {{ govukButton({
           text: "Continue"
         })}}
-        
 
       </form>
     </div>
   </div>
-{% endblock %}`
+{% endblock %}
